# ros_drone_swarm_mocap

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml  setupEnv.sh
bags/: README
calibration/: creative-1280x720.yaml  creative-1920x1080.yaml  creative-640x480.yaml
config/: creative-1280x720.yaml  creative-1920x1080.yaml  creative-640x480.yaml  params.yaml
include/ros_drone_swarm_mocap/station/: pose.h  trilateration.hpp
include/ros_drone_swarm_mocap/worker/: ballDetection.hpp  drawInfoToImage.hpp  extendDIstAng.hpp  extendDistAng.hpp  frequency.hpp  houghDetection.hpp  hsvDetection.hpp  misc.hpp
launch/: Template.launch  camera_to_usb_cam.launch  camera_web_server.launch  client.launch  input_args.launch  load_params_example.launch  master.launch  worker.launch
lib/distance-angle/: distance-angle.cpp  distance-angle.hpp
lib/statistics/: performance.cpp  performance.hpp
msg/: camera_params.msg  commands_from_master.msg  detected_ball_data.msg  hough_values.msg  hsv_values.msg  master_time.msg  mocap_client_data.msg  mocap_worker_data.msg
scripts/: createTestFiles.sh  createTestStats.sh
scripts/matlab/: display-in-3d-from-single-node-obj-pos.m  exp-multiple-nodes-error-estimation.m  exp-multiple-nodes-positions.m  multilateration.m  pixel-distance-relationship.m  single-node-exp-display-results.m
src/client/: main.cpp
src/station/: main.cpp  trilateration.cpp
src/worker/: ballDetection.cpp  extendDistAng.cpp  frequency.cpp  houghDetection.cpp  hsvDetection.cpp  main.cpp  misc.cpp
test/experiments/: README  exp.m  repr_3d.m
test/experiments-raspberry/: angles.csv  cpu.csv  dist-angle.csv  distance.csv  durations.csv  exp.m  network.csv  ram.csv  single-node-exp-display-results.m  temp.csv
test/hough/: CMakeLists.txt  Makefile  main.cpp
test/hsv/: .gitignore  CMakeLists.txt  Makefile  main.cpp  test-misc.hpp
test/trilateration/: .gitignore  CMakeLists.txt  Makefile  main.cpp
